# ODE_Calculator

./: .gitignore  CMakeLists.txt  README.md
docs/: algorithm-notes.md
examples/: test-cases.md
src/: ExactNumber.cpp  ExactNumber.h  ExpressionParser.cpp  ExpressionParser.h  MainWindow.cpp  MainWindow.h  OdeSolver.cpp  OdeSolver.h  main.cpp
